# service-manager

./: .gitignore  Cargo.toml  README.md
docs/: usage.zh-CN.md
scripts/: build-release.sh  check.sh  install.sh  open-service-manager.sh  register-service.sh  uninstall.sh
src/: api.rs  assets.rs  auth.rs  cli.rs  doctor.rs  error.rs  main.rs  model.rs  openhouse_registry.rs  repair_hook.rs  server.rs  service_registry.rs  store.rs
src/providers/: docker.rs  launchd.rs  mod.rs  process.rs  proot.rs  systemd.rs  termux.rs
web/: app.js  index.html  styles.css
