[package]
name = "service-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "json"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
getrandom = "0.2"
humantime = "2"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
http-body-util = "0.1"
hyper = "1"
